Project Page Added

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,4 @@
 <h1>{{theTitle}}</h1>
-<a href="/">Home</a> <br>
-<a href="/about">About</a><br> <br>
+<p><a href="/">Home</a></p>
+<p><a href="/about">About</a></p>
+<p><a href="/projects">Projects</a></p>
